sass skrollr color bits

--- a/index-skrollrtest.html
+++ b/index-skrollrtest.html
@@ -7,7 +7,7 @@
 
 	<title>The New Snow White</title>
 
-	<link rel="stylesheet" type="text/css" href="styles/skrollrtest.css" data-skrollr-stylesheet />
+	<link rel="stylesheet" type="text/css" href="styles/skrollrtest-sass.css" data-skrollr-stylesheet />
 	
 </head>
 
