Move sass skrollr into index, main

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>The New Snow White</title>
 
-	<link href="styles/main.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" type="text/css" href="styles/main.css" data-skrollr-stylesheet />
 </head>
 
 <body>
