--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="http:www.sherwoodandforbes.com/nsw/cache.manifest">
+<html>
 <head>
 	<meta charset="utf-8">
 
@@ -7,7 +7,7 @@
 
 	<title>The New Snow White</title>
 
-	<link rel="stylesheet" type="text/css" href="styles/main.css" data-skrollr-stylesheet />
+	<link rel="stylesheet" type="text/css" href="styles/skrollrtest-sass.css" data-skrollr-stylesheet />
 </head>
 
 <body>
@@ -211,6 +211,7 @@ document.getElementById('factoid01').onclick = function() {
 </script>
 
 <!-- Skrollr -->
+<script type="text/javascript" src="scripts/skrollr.stylesheets.min.js"></script>
 <script type="text/javascript" src="scripts/skrollr.min.js"></script>
 <!--[if lt IE 9]><script type="text/javascript" src="scripts/skrollr.ie.min.js"></script><![endif]-->
 <script type="text/javascript">
