--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
   </div>
  
-  <div id="howto"  class="page"
+  <div id="howto" class="page">
 		<h2 class="front">
       How to read this story:</h2> 	      
     <div class="factoid hidden" id="factoid01">
