added #empty skrollr to css

--- a/index.html
+++ b/index.html
@@ -140,16 +140,9 @@
   </div>
 
           
-  <div id="empty" class="page" 
-    data-1000="top:1024px"
-    data-1500="top:0px"
-    data-2000="top:-1024px">
-		<h2 class="front"
-		  data-600="top:" 
-      data-1000="top:">Snow White is an empty shell.</h2>
-    <img class="cutout back"
-      data-500="top:-45px"
-      data-1000="top:0px"
+  <div id="empty" class="page">
+		<h2 class="front">Snow White is an empty shell.</h2>
+    <img class="cutout back" 
       src="img/snowwhite.png"> 	
       </div>
   </div>
