--- a/index-skrollrtest.html
+++ b/index-skrollrtest.html
@@ -19,7 +19,7 @@
   <div style="background-color:red; height:500px;"></div>
 	<div style="background-color:white; height:500px;"></div>
 	<div style="background-color:blue; height:500px;"></div>
-  <div style="background-color:lime; height:500px;"></div>
+  <div ></div>
 	
 <!- Begin Javascript -------------------------------------------->
     
