no math in heights

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
 	
 	<div id="progress"></div>
 	
-	<div id="cover" class="page"><h1 class="bottom-to-top">Cover, bottom to top</h1></div>
-	<div id="howto" class="page"><h1 class="bottom-to-top">HowTo, bottom to top</h1></div>
-	<div id="empty" class="page"><h1 class="bottom-to-top">Empty, bottom to top</h1></div>
-	<div id="pageEnd" class="page"><h1 class="bottom-to-top">pageEnd, bottom to top</h1></div>
+	<div id="cover" class="page">
+	  <h1>Cover, bottom to top</h1>
+	  </div>
+	<div id="howto" class="page">
+	  <h1>HowTo, bottom to top</h1>
+	  </div>
+	<div id="empty" class="page">
+	  <h1>Empty, bottom to top</h1>
+	  </div>
+	<div id="pageEnd" class="page">
+	  <h1>pageEnd, bottom to top</h1>
+	  </div>
 	
 <!- Begin Javascript -------------------------------------------->
     
