--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	
 	<div id="cover" class="page">
 	  <h1>Cover, bottom to top</h1>
+	  <div class="next"></div>
 	  </div>
 	<div id="howto" class="page">
 	  <h1>HowTo, bottom to top</h1>
