--- a/index.html
+++ b/index.html
@@ -16,17 +16,24 @@
 	<div id="progress"></div>
 	
 	<div id="cover" class="page">
+	  <div id="one"></div>
 	  <h1>Cover, bottom to top</h1>
-	  <div class="next"></div>
+	  <div class="jumpto_two"></div>
 	  </div>
 	<div id="howto" class="page">
+	  <div id="two"></div>
 	  <h1>HowTo, bottom to top</h1>
+	  <div class="jumpto_two"></div>
 	  </div>
 	<div id="empty" class="page">
+	  <div id="three"></div>
 	  <h1>Empty, bottom to top</h1>
+	  <div class="jumpto_two"></div>
 	  </div>
 	<div id="pageEnd" class="page">
+	  <div id="four"></div>
 	  <h1>pageEnd, bottom to top</h1>
+	  <div class="jumpto_top"></div>
 	  </div>
 	
 <!- Begin Javascript -------------------------------------------->
