--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 	<div id="cover" class="page">
 	  <div id="one"></div>
 	  <h1>Cover, bottom to top</h1>
-	  <div class="jumpto_two"></div>
+	  <div id="jumpto_two"><a href="#two">up</a></div>
 	  </div>
 	<div id="howto" class="page">
 	  <div id="two"></div>
 	  <h1>HowTo, bottom to top</h1>
-	  <div class="jumpto_two"></div>
+	  <div id="jumpto_two"><a href="#three">up</a></div>
 	  </div>
 	<div id="empty" class="page">
 	  <div id="three"></div>
 	  <h1>Empty, bottom to top</h1>
-	  <div class="jumpto_two"></div>
+	  <div id="jumpto_two"><a href="#four">up</a></div>
 	  </div>
 	<div id="pageEnd" class="page">
 	  <div id="four"></div>
 	  <h1>pageEnd, bottom to top</h1>
-	  <div class="jumpto_top"></div>
+	  <div id="jumpto_top"><a href="#one">up</a></div>
 	  </div>
 	
 <!- Begin Javascript -------------------------------------------->
