jump to back in _elements

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 	<div id="cover" class="page">
 	  <div id="one"></div>
 	  <h1>Cover, bottom to top</h1>
-	  <div id="jumpto_two" class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#two">page two</a></div>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#two">page two</a></div>
 	  </div>
 	<div id="howto" class="page">
 	  <div id="two"></div>
 	  <h1>HowTo, bottom to top</h1>
-	  <div id="jumpto_three" class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#three">page three</a></div>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#three">page three</a></div>
 	  </div>
 	<div id="empty" class="page">
 	  <div id="three"></div>
 	  <h1>Empty, bottom to top</h1>
-	  <div id="jumpto_four" class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#four">page four</a></div>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#four">page four</a></div>
 	  </div>
 	<div id="pageEnd" class="page">
 	  <div id="four"></div>
 	  <h1>pageEnd, bottom to top</h1>
-	  <div id="jumpto_top" class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#one">back to top</a></div>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#one">back to top</a></div>
 	  </div>
 	
 <!- Begin Javascript -------------------------------------------->
