--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="cover" class="page">
 	  <div id="one"></div>
 	  <h1>Cover, bottom to top</h1>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#two">page two</a></div>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#two"><img src="img/next.png"></a></div>
 	  </div>
 	<div id="howto" class="page">
 	  <div id="two"></div>
