--- a/index.html
+++ b/index.html
@@ -17,23 +17,74 @@
 	
 	<div id="cover" class="page">
 	  <div id="one"></div>
-	  <h1>Cover, bottom to top</h1>
+	  <h1>Red, White, and Black</h1>
 	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#two"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
+	  
 	<div id="howto" class="page">
 	  <div id="two"></div>
-	  <h1>HowTo, bottom to top</h1>
+	  <h3>Let's begin.</h3>
 	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#three"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
+	  
 	<div id="empty" class="page">
 	  <div id="three"></div>
-	  <h1>Empty, bottom to top</h1>
+	  <h2>Snow White is an empty shell.</h2>
 	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#four"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
-	<div id="pageEnd" class="page">
+	  
+  <div id="mother" class="page">
 	  <div id="four"></div>
-	  <h1>pageEnd, bottom to top</h1>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#one"><img src="img/down.png" alt="down button"></a></div>
+	  <h2>MOTHERHOOD IS HELL</h2>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#five"><img src="img/down.png" alt="down button"></a></div>
+	  </div>
+	  
+  <div id="queen" class="page">
+	  <div id="five"></div>
+	  <h2>The Queen is a classic narcissist.</h2>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#six"><img src="img/down.png" alt="down button"></a></div>
+	  </div>
+	  
+  <div id="hunstman" class="page">
+	  <div id="six"></div>
+	  <h2>The Huntsman is a failure.</h2>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#seven"><img src="img/down.png" alt="down button"></a></div>
+	  </div>
+	  
+  <div id="dwarves" class="page">
+	  <div id="seven"></div>
+	  <h2>The Dwarves are outsiders.</h2>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#eight"><img src="img/down.png" alt="down button"></a></div>
+	  </div>
+	  
+  <div id="king" class="page">
+	  <div id="eight"></div>
+	  <h2>The King is absent.</h2>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#ninet"><img src="img/down.png" alt="down button"></a></div>
+	  </div>
+	  
+  <div id="sin" class="page">
+	  <div id="nine"></div>
+	  <h2>ORIGINAL SIN</h2>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#ten"><img src="img/down.png" alt="down button"></a></div>
+	  </div>
+	  
+  <div id="prince" class="page">
+	  <div id="ten"></div>
+	  <h2>The Prince is a necrophiliac.</h2>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#eleven"><img src="img/down.png" alt="down button"></a></div>
+	  </div>
+	  
+  <div id="love" class="page">
+	  <div id="eleven"></div>
+	  <h2>Love's a bitch.</h2>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#last"><img src="img/down.png" alt="down button"></a></div>
+	  </div>
+	  
+	<div id="end" class="page">
+	  <div id="last"></div>
+	  <h1>The End</h1>
+	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#one"><img src="img/down.png" alt="down button" style="transform: rotate(180deg)"></a></div>
 	  </div>
 	
 <!- Begin Javascript -------------------------------------------->
