--- a/index.html
+++ b/index.html
@@ -18,73 +18,73 @@
 	<div id="cover" class="page">
 	  <div id="one"></div>
 	  <h1>Red, White, and Black</h1>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#howto"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#howto"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
 	<div id="howto" class="page">
 	  <div id="two"></div>
 	  <h3>Let's begin.</h3>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#empty"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#empty"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
 	<div id="empty" class="page">
 	  <div id="three"></div>
 	  <h2>Snow White is an empty shell.</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#mother"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#mother"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
   <div id="mother" class="page">
 	  <div id="four"></div>
 	  <h2>MOTHERHOOD IS HELL</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#queen"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#queen"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
   <div id="queen" class="page">
 	  <div id="five"></div>
 	  <h2>The Queen is a classic narcissist.</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#hunstman"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#hunstman"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
   <div id="hunstman" class="page">
 	  <div id="six"></div>
 	  <h2>The Huntsman is a failure.</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#dwarves"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#dwarves"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
   <div id="dwarves" class="page">
 	  <div id="seven"></div>
 	  <h2>The Dwarves are outsiders.</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#king"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#king"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
   <div id="king" class="page">
 	  <div id="eight"></div>
 	  <h2>The King is absent.</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#sin"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#sin"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
   <div id="sin" class="page">
 	  <div id="nine"></div>
 	  <h2>ORIGINAL SIN</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#prince"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#prince"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
   <div id="prince" class="page">
 	  <div id="ten"></div>
 	  <h2>The Prince is a necrophiliac.</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#love"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#love"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
   <div id="love" class="page">
 	  <div id="eleven"></div>
 	  <h2>Love's a bitch.</h2>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#end"><img src="img/down.png" alt="down button"></a></div>
+	  <div class="jumpto" ><a href="#end"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
 	<div id="end" class="page">
 	  <div id="last"></div>
 	  <h1>The End</h1>
-	  <div class="jumpto" data-0="bottom:25px" data-100="bottom:25px"><a href="#cover"><img src="img/down.png" alt="down button" style="transform: rotate(180deg)"></a></div>
+	  <div class="jumpto" ><a href="#cover"><img src="img/down.png" alt="down button" style="transform: rotate(180deg)"></a></div>
 	  </div>
 	
 <!- Begin Javascript -------------------------------------------->
