added title in, removed bottom underline

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 	  </div>
 	  
   <div id="sin" class="page">
+    <h2>ORIGINAL SIN</h2>
 	  <div class="jumpto" ><a href="#prince"><img src="img/down.png" alt="down button"></a></div>
 	  </div>
 	  
