axing pagers for now

--- a/index.html
+++ b/index.html
@@ -17,57 +17,57 @@
 	
 	<div id="cover" class="page">
 	  <h1>Red, White, and Black</h1>
-	  <div class="jumpto" ><a href="#howto"><img src="img/down.png" alt="down button"></a></div>
+	  <!-- <div class="jumpto" ><a href="#howto"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
 	<div id="howto" class="page">
 	  <h3>Let's begin.</h3>
-	  <div class="jumpto" ><a href="#empty"><img src="img/down.png" alt="down button"></a></div>
+	  <!-- <div class="jumpto" ><a href="#empty"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
 	<div id="empty" class="page">
 	  <h2>Snow White is an empty shell.</h2>
-	  <div class="jumpto" ><a href="#mother"><img src="img/down.png" alt="down button"></a></div>
+	  <!-- <div class="jumpto" ><a href="#mother"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="mother" class="page">
 	  <h2>MOTHERHOOD IS HELL</h2>
-	  <div class="jumpto" ><a href="#queen"><img src="img/down.png" alt="down button"></a></div>
+	  <!-- <div class="jumpto" ><a href="#queen"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="queen" class="page">
 	  <h2>The Queen is a classic narcissist.</h2>
-	  <div class="jumpto" ><a href="#hunstman"><img src="img/down.png" alt="down button"></a></div>
+	  <!-- <div class="jumpto" ><a href="#hunstman"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="hunstman" class="page">
 	  <h2>The Huntsman is a failure.</h2>
-	  <div class="jumpto" ><a href="#dwarves"><img src="img/down.png" alt="down button"></a></div>
+	  <!-- <div class="jumpto" ><a href="#dwarves"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="dwarves" class="page">
 	  <h2>The Dwarves are outsiders.</h2>
-	  <div class="jumpto" ><a href="#king"><img src="img/down.png" alt="down button"></a></div>
+<!-- 	  <div class="jumpto" ><a href="#king"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="king" class="page">
 	  <h2>The King is absent.</h2>
-	  <div class="jumpto" ><a href="#sin"><img src="img/down.png" alt="down button"></a></div>
+<!-- 	  <div class="jumpto" ><a href="#sin"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="sin" class="page">
     <h2>ORIGINAL SIN</h2>
-	  <div class="jumpto" ><a href="#prince"><img src="img/down.png" alt="down button"></a></div>
+<!-- 	  <div class="jumpto" ><a href="#prince"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="prince" class="page">
 	  <h2>The Prince is a necrophiliac.</h2>
-	  <div class="jumpto" ><a href="#love"><img src="img/down.png" alt="down button"></a></div>
+	  <!-- <div class="jumpto" ><a href="#love"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="love" class="page">
 	  <h2>Love's a bitch.</h2>
-	  <div class="jumpto" ><a href="#end"><img src="img/down.png" alt="down button"></a></div>
+	  <!-- <div class="jumpto" ><a href="#end"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
 	<div id="end" class="page">
