--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	  
 	<div id="end" class="page">
 	  <h1>The End</h1>
-	  <div class="jumpto" ><a href="#cover"><img src="img/down.png" alt="down button" style="transform: rotate(180deg); -webkit-transform: rotate(180deg)"></a></div>
+<!-- 	  <div class="jumpto" ><a href="#cover"><img src="img/down.png" alt="down button" style="transform: rotate(180deg); -webkit-transform: rotate(180deg)"></a></div> -->
 	  </div>
 	
 <!- Begin Javascript -------------------------------------------->
