commenting out top image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  
 	<div id="howto" class="page">
 	  <h3>Let's begin.</h3>
-	  <img class="cutout" id="hand" src="img/hand.png">
+<!-- 	  <img class="cutout" id="hand" src="img/hand.png"> -->
 	  <a class="toggle-hand"><img style="position:absolute;" src="img/hand.png"></a>
     <a class="toggle-hand"><img style="display: none; position:absolute;" id="hand" src="img/hand-empty.png"></a>
 	  <img 
