--- a/text_pageinteractions.html
+++ b/text_pageinteractions.html
@@ -8,32 +8,35 @@
 	<title>The New Snow White</title>
 
 	<link rel="stylesheet" type="text/css" href="styles/main.css" data-skrollr-stylesheet />
+	<style>
+	  .tester-page {width:768px; height:1024px; background: #ccc}
+	  .tester-page:nth-child(odd) {background: #fff}
+	  
+	  .hidden-white {display: none;}
+	  .tap-image {position:absolute;}
+	</style>
 	
 </head>
 
 <body style="background: #000">
 
-<div style="width:768px; height:1024px; background: #ccc">
-
-
+<div class="tester-page">
 <!--
 <img style="position:absolute;" src="img/hand.png">
 <img style="display: none; position:absolute;" id="tiger" src="img/hand-empty.png">
 <a style="position: absolute; top: 25px; left: 25px; cursor: pointer; color: blue;" id="toggle">click to toggle</a>
 -->
-
-<a class="toggle"><img style="position:absolute;" src="img/hand.png"></a>
-<a class="toggle"><img style="display: none; position:absolute;" id="hand" src="img/hand-empty.png"></a>
-
+<a class="toggle"><img class="tap-image" src="img/hand.png"></a>
+<a class="toggle"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>
 </div>
 
+<!--JS schtuff ----->
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
 <script>
-
-$('.toggle').click(function() {
+  $('.toggle').click(function() {
     $('#hand').toggle();
-});
+    });
 </script>
 
 
