--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/main.css" data-skrollr-stylesheet />
 	
+  <style>
+	  .tester-page {width:768px; height:1024px; background: #ccc}
+	  .tester-page:nth-child(odd) {background: #fff}
+	  
+	  .hidden-white {display: none;}
+	  .tap-image {position:absolute;}
+	</style>
+	
 </head>
 
 <body>
@@ -22,14 +30,8 @@
 	  
 	<div id="howto" class="page">
 	  <h3>Let's begin.</h3>
-<!-- 	  <img class="cutout" id="hand" src="img/hand.png"> -->
-	  <a class="toggle-hand"><img style="position:absolute;" src="img/hand.png"></a>
-    <a class="toggle-hand"><img style="display: none; position:absolute;" id="hand" src="img/hand-empty.png"></a>
-	  <img 
-     onclick="document.getElementById('hand').src=this.src" 
-     src="img/hand-empty.png">
-
-	  <!-- <div class="jumpto" ><a href="#empty"><img src="img/down.png" alt="down button"></a></div> -->
+    <a class="toggle-hand"><img class="tap-image" src="img/hand.png"></a>
+      <a class="toggle-hand"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>	  <!-- <div class="jumpto" ><a href="#empty"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
 	<div id="empty" class="page">
@@ -131,7 +133,7 @@ document.getElementById('factoid01').onclick = function() {
   $('.toggle-hand').click(function() {
     $('#hand').toggle();
     });
-</script>
+</script>>
 		
 </body>
 </html>
