--- a/text_pageinteractions.html
+++ b/text_pageinteractions.html
@@ -26,15 +26,15 @@
 <img style="display: none; position:absolute;" id="tiger" src="img/hand-empty.png">
 <a style="position: absolute; top: 25px; left: 25px; cursor: pointer; color: blue;" id="toggle">click to toggle</a>
 -->
-<a class="toggle"><img class="tap-image" src="img/hand.png"></a>
-<a class="toggle"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>
+<a class="toggle-hand"><img class="tap-image" src="img/hand.png"></a>
+<a class="toggle-hand"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>
 </div>
 
 <!--JS schtuff ----->
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
-  $('.toggle').click(function() {
+  $('.toggle-hand').click(function() {
     $('#hand').toggle();
     });
 </script>
