--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
 	<div id="howto" class="page">
 	  <h3>Let's begin.</h3>
     <a class="toggle-hand"><img class="tap-image" src="img/hand.png"></a>
-      <a class="toggle-hand"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>	  <!-- <div class="jumpto" ><a href="#empty"><img src="img/down.png" alt="down button"></a></div> -->
+      <a class="toggle-hand"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>	  
+      <!-- <div class="jumpto" ><a href="#empty"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
 	<div id="empty" class="page">
 	  <h2>Snow White is an empty shell.</h2>
-	  <img class="cutout" src="img/snowwhite.png">
+	  <a class="toggle-eyes"><img class="tap-image" src="img/snowwhite.png"></a>
+      <a class="toggle-eyes"><img class="tap-image hidden-white" id="crown" src="img/snowwhite-eyes.png"></a>
     <!-- <div class="jumpto" ><a href="#mother"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -48,19 +50,22 @@
 	  
   <div id="queen" class="page">
 	  <h2>The Queen is a classic narcissist.</h2>
-	  <img class="cutout" src="img/queen.png">
+    <a class="toggle-crown"><img class="tap-image" src="img/queen-crown.png"></a>
+      <a class="toggle-crown"><img class="tap-image hidden-white" id="crown" src="img/queen.png"></a>
 	  <!-- <div class="jumpto" ><a href="#hunstman"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="hunstman" class="page">
 	  <h2>The Huntsman is a failure.</h2>
-	  <img class="cutout" src="img/hunstman.png">
+    <a class="toggle-knife"><img class="tap-image" src="img/hunstman.png"></a>
+      <a class="toggle-knife"><img class="tap-image hidden-white" id="knife" src="imghunstman-phallus.png"></a>
 	  <!-- <div class="jumpto" ><a href="#dwarves"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="dwarves" class="page">
 	  <h2>The Dwarves are outsiders.</h2>
-	  <img class="cutout" src="img/dwarves.png">
+    <a class="toggle-dwarves"><img class="tap-image" src="img/dwarves.png"></a>
+      <a class="toggle-dwarves"><img class="tap-image hidden-white" id="crowd" src="img/dwarves-guys.png"></a>
 <!-- 	  <div class="jumpto" ><a href="#king"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -78,7 +83,8 @@
 	  
   <div id="prince" class="page">
 	  <h2>The Prince is a necrophiliac.</h2>
-	  <img class="cutout" src="img/coffin.png">
+    <a class="toggle-death"><img class="tap-image" src="img/coffin.png"></a>
+      <a class="toggle-death"><img class="tap-image hidden-white" id="death" src="img/coffin-death.png"></a>
 	  <!-- <div class="jumpto" ><a href="#love"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -130,9 +136,12 @@ document.getElementById('factoid01').onclick = function() {
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <script>
-  $('.toggle-hand').click(function() {
-    $('#hand').toggle();
-    });
+  $('.toggle-hand').click(function(){ $('#hand').toggle();});
+  $('.toggle-crown').click(function(){ $('#crown').toggle();});
+  $('.toggle-eyes').click(function(){ $('#eyes').toggle();});
+  $('.toggle-dwarves').click(function(){ $('#crowd').toggle();});
+  $('.toggle-knife').click(function(){ $('#knife').toggle();});
+  $('.toggle-death').click(function(){ $('#death').toggle();});
 </script>>
 		
 </body>
