--- a/text_pageinteractions.html
+++ b/text_pageinteractions.html
@@ -9,8 +9,8 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/main.css" data-skrollr-stylesheet />
 	<style>
-	  .tester-page {width:768px; height:1024px; background: #ccc}
-	  .tester-page:nth-child(odd) {background: #fff}
+	  .tester-page {width:768px; height:1024px; background: #fff; border-bottom: 2px solid pink;}
+	  .tester-page img {width: 768px;}
 	  
 	  .hidden-white {display: none;}
 	  .tap-image {position:absolute;}
@@ -18,24 +18,30 @@
 	
 </head>
 
-<body style="background: #000">
+<body style="background: #000; height:15000px;">
 
 <div class="tester-page">
-<!--
-<img style="position:absolute;" src="img/hand.png">
+<!--<img style="position:absolute;" src="img/hand.png">
 <img style="display: none; position:absolute;" id="tiger" src="img/hand-empty.png">
-<a style="position: absolute; top: 25px; left: 25px; cursor: pointer; color: blue;" id="toggle">click to toggle</a>
--->
-<a class="toggle-hand"><img class="tap-image" src="img/hand.png"></a>
-<a class="toggle-hand"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>
+<a style="position: absolute; top: 25px; left: 25px; cursor: pointer; color: blue;" id="toggle">click to toggle</a>-->
+<a class="toggle"><img class="tap-image" src="img/hand.png"></a>
+<a class="toggle"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>
 </div>
+
+
+<div class="tester-page">
+<a class="toggle"><img class="tap-image" src="img/queen.png"></a>
+<a class="toggle"><img class="tap-image hidden-white" id="crown" src="img/queen-crown.png"></a>
+</div>
+
 
 <!--JS schtuff ----->
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>
-  $('.toggle-hand').click(function() {
-    $('#hand').toggle();
+  $('.toggle').click(function() {
+$('#hand').toggle();
+    $('#crown').toggle();
     });
 </script>
 
