styles out of html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div id="hunstman" class="page">
 	  <h2>The Huntsman is a failure.</h2>
     <a class="toggle-knife"><img class="tap-image" src="img/hunstman.png"></a>
-      <a class="toggle-knife"><img class="tap-image hidden-white" id="knife" src="imghunstman-phallus.png"></a>
+      <a class="toggle-knife"><img class="tap-image hidden-white" id="knife" src="img/hunstman-phallus.png"></a>
 	  <!-- <div class="jumpto" ><a href="#dwarves"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
