--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ document.getElementById('factoid01').onclick = function() {
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <script>
-  $('.toggle-hand').click(function(){ $('#hand').toggle();});
-  $('.toggle-crown').click(function(){ $('#crown').toggle();});
-  $('.toggle-eyes').click(function(){ $('#eyes').toggle();});
-  $('.toggle-dwarves').click(function(){ $('#crowd').toggle();});
-  $('.toggle-knife').click(function(){ $('#knife').toggle();});
-  $('.toggle-death').click(function(){ $('#death').toggle();});
-</script>>
+  $('.toggle-hand').click(function() { $('#hand').toggle();});
+  $('.toggle-crown').click(function() { $('#crown').toggle();});
+  $('.toggle-eyes').click(function() { $('#eyes').toggle();});
+  $('.toggle-dwarves').click(function() { $('#crowd').toggle();});
+  $('.toggle-knife').click(function() { $('#knife').toggle();});
+  $('.toggle-death').click(function() { $('#death').toggle();});
+</script>
 		
 </body>
 </html>
