--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/main.css" data-skrollr-stylesheet />
 	
+	<!-- JQuery please god don't conflict with skrollr -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>$('.toggle-hand').click(function() { $('#hand').toggle();});</script>
+	
 </head>
 
 <body>
@@ -121,20 +125,17 @@ document.getElementById('factoid01').onclick = function() {
   });
 </script>
 
-<!-- LiveReload -->
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 
-<!-- JQuery please god don't conflict with skrollr -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
-<script>
-  $('.toggle-hand').click(function() { $('#hand').toggle();});
+<!--
+<script>$('.toggle-hand').click(function() { $('#hand').toggle();});
   $('.toggle-crown').click(function() { $('#crown').toggle();});
   $('.toggle-eyes').click(function() { $('#eyes').toggle();});
   $('.toggle-dwarves').click(function() { $('#crowd').toggle();});
   $('.toggle-knife').click(function() { $('#knife').toggle();});
   $('.toggle-death').click(function() { $('#death').toggle();});
 </script>
+-->
+
 		
 </body>
 </html>
