--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div id="empty" class="page">
 	  <h2>Snow White is an empty shell.</h2>
 	  <a class="toggle-eyes"><img class="tap-image" src="img/snowwhite.png"></a>
-      <a class="toggle-eyes"><img class="tap-image hidden-white" id="crown" src="img/snowwhite-eyes.png"></a>
+      <a class="toggle-eyes"><img class="tap-image hidden-white" id="eyes" src="img/snowwhite-eyes.png"></a>
     <!-- <div class="jumpto" ><a href="#mother"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -115,6 +115,7 @@
 	<!-- JQuery please god don't conflict with skrollr -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>$('.toggle-hand').click(function() { $('#hand').toggle();});</script>
+<script>$('.toggle-eyes').click(function() { $('#eyes').toggle();});</script>
 
 <!--
 <script>$('.toggle-hand').click(function() { $('#hand').toggle();});
