no covering title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  </div>
 	  
 	<div id="empty" class="page">
-	  <h2>Snow White is an empty shell.</h2>
+	  <!-- <h2>Snow White is an empty shell.</h2> -->
 	  <a class="toggle-eyes"><img class="tap-image" src="img/snowwhite.png"></a>
       <a class="toggle-eyes"><img class="tap-image hidden-white" id="eyes" src="img/snowwhite-eyes.png"></a>
     <!-- <div class="jumpto" ><a href="#mother"><img src="img/down.png" alt="down button"></a></div> -->
