--- a/index.html
+++ b/index.html
@@ -114,8 +114,10 @@
 
 	<!-- JQuery please god don't conflict with skrollr -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>$('.toggle-hand').click(function() { $('#hand').toggle();});</script>
-<script>$('.toggle-eyes').click(function() { $('#eyes').toggle();});</script>
+<script>
+  $('.toggle-hand').click(function() { $('#hand').toggle();});
+  $('.toggle-eyes').click(function() { $('#eyes').toggle();});
+  </script>
 
 <!--
 <script>$('.toggle-hand').click(function() { $('#hand').toggle();});
