--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
 	  
 	<div id="howto" class="page">
 	  <h3>Let's begin.</h3>
-    <a class="toggle-hand"><img class="tap-image" src="img/hand.png"></a>
-      <a class="toggle-hand"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>	  
+	 <span>
+	    <img class="tap-image" src="img/hand.png"></a>
+      <img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>
+      <a class="img-button">yes</a>
+      </span>	  
       <!-- <div class="jumpto" ><a href="#empty"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
 	<div id="empty" class="page">
-	  <!-- <h2>Snow White is an empty shell.</h2> -->
-	  <a class="toggle-eyes"><img class="tap-image" src="img/snowwhite.png"></a>
-      <a class="toggle-eyes"><img class="tap-image hidden-white" id="eyes" src="img/snowwhite-eyes.png"></a>
+	  <h2>Snow White is an empty shell.</h2>
+	  <span>
+	    <img class="tap-image" src="img/snowwhite.png"></a>
+      <img class="tap-image hidden-white" id="eyes" src="img/snowwhite-eyes.png"></a>
+      <a class="img-button">yes</a>
+      </span>
     <!-- <div class="jumpto" ><a href="#mother"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -43,22 +49,31 @@
 	  
   <div id="queen" class="page">
 	  <h2>The Queen is a classic narcissist.</h2>
-    <a class="toggle-crown"><img class="tap-image" src="img/queen-crown.png"></a>
-      <a class="toggle-crown"><img class="tap-image hidden-white" id="crown" src="img/queen.png"></a>
+	 <span>
+	    <img class="tap-image" src="img/queen-crown.png"></a>
+      <img class="tap-image hidden-white" id="crown" src="img/queen.png"></a>
+      <a class="img-button">yes</a>
+      </span>	 
 	  <!-- <div class="jumpto" ><a href="#hunstman"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="hunstman" class="page">
 	  <h2>The Huntsman is a failure.</h2>
-    <a class="toggle-knife"><img class="tap-image" src="img/hunstman.png"></a>
-      <a class="toggle-knife"><img class="tap-image hidden-white" id="knife" src="img/hunstman-phallus.png"></a>
+    <span>
+	    <img class="tap-image" src="img/hunstman.png"></a>
+      <img class="tap-image hidden-white" id="knife" src="img/hunstman-phallus.png"></a>
+      <a class="img-button">yes</a>
+      </span>	 
 	  <!-- <div class="jumpto" ><a href="#dwarves"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="dwarves" class="page">
 	  <h2>The Dwarves are outsiders.</h2>
-    <a class="toggle-dwarves"><img class="tap-image" src="img/dwarves.png"></a>
-      <a class="toggle-dwarves"><img class="tap-image hidden-white" id="crowd" src="img/dwarves-guys.png"></a>
+    <span>
+	    <img class="tap-image" src="img/dwarves.png"></a>
+      <img class="tap-image hidden-white" id="crowd" src="img/dwarves-guys.png"></a>
+      <a class="img-button">yes</a>
+      </span>	      
 <!-- 	  <div class="jumpto" ><a href="#king"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -76,8 +91,11 @@
 	  
   <div id="prince" class="page">
 	  <h2>The Prince is a necrophiliac.</h2>
-    <a class="toggle-death"><img class="tap-image" src="img/coffin.png"></a>
-      <a class="toggle-death"><img class="tap-image hidden-white" id="death" src="img/coffin-death.png"></a>
+    <span>
+	    <img class="tap-image" src="img/coffin.png"></a>
+      <img class="tap-image hidden-white" id="death" src="img/coffin-death.png"></a>
+      <a class="img-button">yes</a>
+      </span>	
 	  <!-- <div class="jumpto" ><a href="#love"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -114,20 +132,18 @@
 
 	<!-- JQuery please god don't conflict with skrollr -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>
-  $('.toggle-hand').click(function() { $('#hand').toggle();});
-  $('.toggle-eyes').click(function() { $('#eyes').toggle();});
-  </script>
 
-<!--
-<script>$('.toggle-hand').click(function() { $('#hand').toggle();});
-  $('.toggle-crown').click(function() { $('#crown').toggle();});
-  $('.toggle-eyes').click(function() { $('#eyes').toggle();});
-  $('.toggle-dwarves').click(function() { $('#crowd').toggle();});
-  $('.toggle-knife').click(function() { $('#knife').toggle();});
-  $('.toggle-death').click(function() { $('#death').toggle();});
+<script>
+  $('.img-button').click(function() 
+    { $('#hand').toggle();
+    { $('#eyes').toggle();
+    { $('#crown').toggle();
+    { $('#knife').toggle();
+    { $('#crowd').toggle();
+    { $('#death').toggle();
+  });
 </script>
--->
+
 
 		
 </body>
