--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
 <script>
-  $('.img-button').click(function() 
-    { $('#hand').toggle();
-    { $('#eyes').toggle();
-    { $('#crown').toggle();
-    { $('#knife').toggle();
-    { $('#crowd').toggle();
-    { $('#death').toggle();
+  $('.img-button').click(function() { 
+    $('#hand').toggle();
+    $('#eyes').toggle();
+    $('#crown').toggle();
+    $('#knife').toggle();
+    $('#crowd').toggle();
+    $('#death').toggle();
   });
 </script>
 
