--- a/text_pageinteractions.html
+++ b/text_pageinteractions.html
@@ -44,10 +44,9 @@
 
 
 <div class="tester-page">
-<img class="tap-image" src="img/dwarves.png">
+<span><img class="tap-image" src="img/dwarves.png">
 <img class="tap-image hidden-white" id="crowd" src="img/dwarves-guys.png">
-<a class="img-button">yes</a>
-<a class="img-button" id="crowd-button">try that?</a>
+<a class="img-button">yes</a></span>
 </div>
 
 
