added img, styled img button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	  <h2>The Dwarves are outsiders.</h2>
     <span>
 	    <img class="tap-image" src="img/dwarves.png"></a>
-      <img class="tap-image hidden-white" id="crowd" src="img/dwarves-guys.png"></a>
+      <img class="tap-image hidden-white" id="crowd" src="img/dwarves-crowd.png"></a>
       <a class="img-button">yes</a>
       </span>	      
 <!-- 	  <div class="jumpto" ><a href="#king"><img src="img/down.png" alt="down button"></a></div> -->
