--- a/text_pageinteractions.html
+++ b/text_pageinteractions.html
@@ -12,7 +12,7 @@
 	  .tester-page {width:768px; height:1024px; background: #fff; border-bottom: 2px solid pink; position: relative}
 	  .tester-page img {width: 768px;}
 	  
-	  .hidden-white {display: none;}
+	  .hidden {display: none;}
 	  .tap-image {position:absolute;}
 	  
 	  .img-button {
@@ -33,19 +33,19 @@
 <img style="display: none; position:absolute;" id="tiger" src="img/hand-empty.png">
 <a style="position: absolute; top: 25px; left: 25px; cursor: pointer; color: blue;" id="toggle">click to toggle</a>-->
 <a class="toggle"><img class="tap-image" src="img/hand.png"></a>
-<a class="toggle"><img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>
+<a class="toggle"><img class="tap-image hidden" id="hand" src="img/hand-empty.png"></a>
 </div>
 
 
 <div class="tester-page">
 <a class="toggle-two"><img class="tap-image" src="img/queen.png"></a>
-<a class="toggle-two"><img class="tap-image hidden-white" id="crown" src="img/queen-crown.png"></a>
+<a class="toggle-two"><img class="tap-image hidden" id="crown" src="img/queen-crown.png"></a>
 </div>
 
 
 <div class="tester-page">
 <span><img class="tap-image" src="img/dwarves.png">
-<img class="tap-image hidden-white" id="crowd" src="img/dwarves-guys.png">
+<img class="tap-image hidden" id="crowd" src="img/dwarves-guys.png">
 <a class="img-button">yes</a></span>
 </div>
 
