--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </span>
     <span>
       <div class="story hidden" id="howto-story">
-        <p>This is the text on page one.</p>
+        <p>Tap on the a button to read the story.</p>
         </div>
       <a class="button story-button">a</a>
       </span>	  
@@ -43,15 +43,31 @@
       <img class="tap-image hidden-white" id="eyes" src="img/snowwhite-eyes.png"></a>
       <a class="button img-button">yes</a>
       </span>
+    <span>
+      <div class="story hidden" id="empty-story">
+        <p></p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>
     <!-- <div class="jumpto" ><a href="#mother"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="mother" class="page">
 	  <h2>MOTHERHOOD IS HELL</h2>
 	  <img class="cutout" src="img/hand.png">
+    <span>
+      <div class="story hidden" id="mother-story">
+        <p>One winter morning, a young Queen was sewing by her window. As she looked out on the snow, 
+        she pricked her finger and shed three drops of blood. Taken by the sight, she wished for a 
+        child with lips red as blood, skin white as snow, and hair black as the ebony window frame.</p> 
+        <p>Soon the Queen had her wish, and little Snow White was born. But during her birth the 
+        Queen died, and soon a new Queen stood in her place.</p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>
 	  <!-- <div class="jumpto" ><a href="#queen"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
-	  
+	  	  
   <div id="queen" class="page">
 	  <h2>The Queen is a classic narcissist.</h2>
 	 <span>
@@ -59,6 +75,16 @@
       <img class="tap-image hidden-white" id="crown" src="img/queen.png"></a>
       <a class="button img-button">yes</a>
       </span>	 
+    <span>
+      <div class="story hidden" id="queen-story">
+        <p>The new Queen was vain and cruel, as cold as the last was warm. She possessed a magic mirror 
+        that could only speak the truth, and she regularly consulted the mirror to ensure that she was 
+        the most beautiful creature in the kingdom.</p>
+        <p>Little Snow White grew into a beautiful girl, and a jealous rage filled the Queen’s heart. Looking upon 
+        Snow White’s fair face awoke something deep within the Queen, and she could have no peace. </p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>
 	  <!-- <div class="jumpto" ><a href="#hunstman"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -69,6 +95,12 @@
       <img class="tap-image hidden-white" id="knife" src="img/hunstman-phallus.png"></a>
       <a class="button img-button">yes</a>
       </span>	 
+    <span>
+      <div class="story hidden" id="howto-story">
+        <p>This is the text on page one.</p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>
 	  <!-- <div class="jumpto" ><a href="#dwarves"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -79,18 +111,36 @@
       <img class="tap-image hidden-white" id="crowd" src="img/dwarves-crowd.png"></a>
       <a class="button img-button">yes</a>
       </span>	      
+    <span>
+      <div class="story hidden" id="howto-story">
+        <p>This is the text on page one.</p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>
 <!-- 	  <div class="jumpto" ><a href="#king"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="king" class="page">
 	  <h2>The King is absent.</h2>
 	  <img class="cutout" src="img/king.png">
+    <span>
+      <div class="story hidden" id="howto-story">
+        <p>This is the text on page one.</p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>
 <!-- 	  <div class="jumpto" ><a href="#sin"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="sin" class="page">
     <h2>ORIGINAL SIN</h2>
     <img class="cutout" src="img/hand.png">
+    <span>
+      <div class="story hidden" id="howto-story">
+        <p>This is the text on page one.</p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>
 <!-- 	  <div class="jumpto" ><a href="#prince"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
@@ -101,12 +151,24 @@
       <img class="tap-image hidden-white" id="death" src="img/coffin-death.png"></a>
       <a class="button img-button">yes</a>
       </span>	
+    <span>
+      <div class="story hidden" id="howto-story">
+        <p>This is the text on page one.</p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>	
 	  <!-- <div class="jumpto" ><a href="#love"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
   <div id="love" class="page">
 	  <h2>Love's a bitch.</h2>
 	  <img class="cutout" src="img/hand.png">
+    <span>
+      <div class="story hidden" id="howto-story">
+        <p>This is the text on page one.</p>
+        </div>
+      <a class="button story-button">a</a>
+      </span>
 	  <!-- <div class="jumpto" ><a href="#end"><img src="img/down.png" alt="down button"></a></div> -->
 	  </div>
 	  
