id, not class, in js

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 </script>
 
 <script>
-  $('.story-button').click(function() { 
+  $('#story-button').click(function() { 
     $('#howto-story').toggle();
     $('#empty-story').toggle();
     $('#mother-story').toggle();
