getting my a together

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	  <h2>The Huntsman is a failure.</h2>
     <span>
 	    <img class="tap-image" src="img/hunstman.png"></a>
-      <img class="tap-image hidden-white" id="knife" src="img/hunstman-phallus.png"></a>
+      <img class="tap-image hidden-white" id="knife" src="img/hunstman_phallus.png"></a>
       <a class="button img-button">yes</a>
       </span>	 
     <div class="story hidden" id="hunstman-story">
