--- a/index.html
+++ b/index.html
@@ -241,13 +241,12 @@
 -->
 
 <script>
-  $('.img-button .img-button-hand').click(function() { $('#hand').toggle(); });
-  $('.img-button .img-button-eyes').click(function() { $('#eyes').toggle(); });
-  $('.img-button .img-button-eyes').click(function() { $('.image-button-eyes').toggle(); });
-  $('.img-button .img-button-crown').click(function() { $('#crown').toggle(); });
-  $('.img-button .img-button-knife').click(function() { $('#knife').toggle(); });
-  $('.img-button .img-button-crowd').click(function() { $('#crowd').toggle(); });
-  $('.img-button .img-button-death').click(function() { $('#death').toggle(); });
+  $('.img-button-hand').click(function() { $('#hand').toggle(); });
+  $('.img-button-eyes').click(function() { $('#eyes').toggle(); { $('.image-button-eyes-on').toggle(); });
+  $('.img-button-crown').click(function() { $('#crown').toggle(); });
+  $('.img-button-knife').click(function() { $('#knife').toggle(); });
+  $('.img-button-crowd').click(function() { $('#crowd').toggle(); });
+  $('.img-button-death').click(function() { $('#death').toggle(); });
 </script>
 
 <script>
