separate script tags

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 	    <img class="tap-image" src="img/snowwhite.png"></a>
       <img class="tap-image hidden-white" id="eyes" src="img/snowwhite-eyes.png"></a>
       <a class="button img-button img-button-eyes">yes</a>
-      <a class="button img-button img-button-eyes img-button-eyes-on hidden ">no</a>
       </span>
     <div class="story hidden" id="empty-story">
       <p>Once upon a time,</p>
@@ -240,14 +239,12 @@
 </script>
 -->
 
-<script>
-  $('.img-button-hand').click(function() { $('#hand').toggle(); });
-  $('.img-button-eyes').click(function() { $('#eyes').toggle(); { $('.image-button-eyes-on').toggle(); });
-  $('.img-button-crown').click(function() { $('#crown').toggle(); });
-  $('.img-button-knife').click(function() { $('#knife').toggle(); });
-  $('.img-button-crowd').click(function() { $('#crowd').toggle(); });
-  $('.img-button-death').click(function() { $('#death').toggle(); });
-</script>
+<script>  $('.img-button-hand').click(function() { $('#hand').toggle(); }); </script>
+<script>  $('.img-button-eyes').click(function() { $('#eyes').toggle(); }); </script>
+<script>  $('.img-button-crown').click(function() { $('#crown').toggle(); }); </script>
+<script>  $('.img-button-knife').click(function() { $('#knife').toggle(); }); </script>
+<script>  $('.img-button-crowd').click(function() { $('#crowd').toggle(); }); </script>
+<script>  $('.img-button-death').click(function() { $('#death').toggle(); }); </script>
 
 <script>
   $('#story-button').click(function() { 
