--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  <h3>Let's begin.</h3>
 	 <span>
 	    <img class="tap-image" src="img/hand.png"></a>
-      <img class="tap-image hidden-white" id="hand" src="img/hand-empty.png"></a>
+      <img class="tap-image hidden" id="hand" src="img/hand-empty.png"></a>
       <a class="button img-button img-button-hand">yes</a>
       </span>
     <div class="story hidden" id="howto-story">
@@ -40,7 +40,7 @@
 	  <h2>Snow White is an empty shell.</h2>
 	  <span>
 	    <img class="tap-image" src="img/snowwhite.png"></a>
-      <img class="tap-image hidden-white" id="eyes" src="img/snowwhite-eyes.png"></a>
+      <img class="tap-image hidden" id="eyes" src="img/snowwhite-eyes.png"></a>
       <a class="button img-button img-button-eyes">yes</a>
       </span>
     <div class="story hidden" id="empty-story">
@@ -66,7 +66,7 @@
 	  <h2>The Queen is a classic narcissist.</h2>
 	 <span>
 	    <img class="tap-image" src="img/queen-crown.png"></a>
-      <img class="tap-image hidden-white" id="crown" src="img/queen.png"></a>
+      <img class="tap-image hidden" id="crown" src="img/queen.png"></a>
       <a class="button img-button img-button-crown">yes</a>
       </span>	 
     <div class="story hidden" id="queen-story">
@@ -87,7 +87,7 @@
 	  <h2>The Huntsman is a failure.</h2>
     <span>
 	    <img class="tap-image" src="img/hunstman.png"></a>
-      <img class="tap-image hidden-white" id="knife" src="img/hunstman_phallus.png"></a>
+      <img class="tap-image hidden" id="knife" src="img/hunstman_phallus.png"></a>
       <a class="button img-button img-button img-button-knife">yes</a>
       </span>	 
     <div class="story hidden" id="hunstman-story">
@@ -106,7 +106,7 @@
 	  <h2>The Dwarves are outsiders.</h2>
     <span>
 	    <img class="tap-image" src="img/dwarves.png"></a>
-      <img class="tap-image hidden-white" id="crowd" src="img/dwarves-crowd.png"></a>
+      <img class="tap-image hidden" id="crowd" src="img/dwarves-crowd.png"></a>
       <a class="button img-button img-button-crowd">yes</a>
       </span>	      
     <div class="story hidden" id="dwarves-story">
@@ -160,7 +160,7 @@
 	  <h2>The Prince is a necrophiliac.</h2>
     <span>
 	    <img class="tap-image" src="img/coffin.png"></a>
-      <img class="tap-image hidden-white" id="death" src="img/coffin-death.png"></a>
+      <img class="tap-image hidden" id="death" src="img/coffin-death.png"></a>
       <a class="button img-button img-button-death">yes</a>
       </span>	
     <span>
