swap image order, name _white

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	<div id="howto" class="page">
 	  <h3>Let's begin.</h3>
 	 <span>
-	    <img class="tap-image" src="img/hand.png"></a>
-      <img class="tap-image hidden" id="hand" src="img/hand-empty.png"></a>
+	    <img class="tap-image" src="img/hand-white.png"></a>
+      <img class="tap-image hidden" id="hand" src="img/hand.png"></a>
       <a class="button img-button img-button-hand">yes</a>
       </span>
     <div class="story hidden" id="howto-story">
@@ -39,8 +39,8 @@
 	<div id="empty" class="page">
 	  <h2>Snow White is an empty shell.</h2>
 	  <span>
-	    <img class="tap-image" src="img/snowwhite.png"></a>
-      <img class="tap-image hidden" id="eyes" src="img/snowwhite-eyes.png"></a>
+	    <img class="tap-image" src="img/snowwhite-white.png"></a>
+      <img class="tap-image hidden" id="eyes" src="img/snowwhite.png"></a>
       <a class="button img-button img-button-eyes">yes</a>
       </span>
     <div class="story hidden" id="empty-story">
@@ -65,8 +65,8 @@
   <div id="queen" class="page">
 	  <h2>The Queen is a classic narcissist.</h2>
 	 <span>
-	    <img class="tap-image" src="img/queen-crown.png"></a>
-      <img class="tap-image hidden" id="crown" src="img/queen.png"></a>
+	    <img class="tap-image" src="img/queen.png"></a>
+      <img class="tap-image hidden" id="crown" src="img/queen-white.png"></a>
       <a class="button img-button img-button-crown">yes</a>
       </span>	 
     <div class="story hidden" id="queen-story">
@@ -86,8 +86,8 @@
   <div id="hunstman" class="page">
 	  <h2>The Huntsman is a failure.</h2>
     <span>
-	    <img class="tap-image" src="img/hunstman.png"></a>
-      <img class="tap-image hidden" id="knife" src="img/hunstman_phallus.png"></a>
+	    <img class="tap-image" src="img/hunstman-white.png"></a>
+      <img class="tap-image hidden" id="knife" src="img/hunstman.png"></a>
       <a class="button img-button img-button img-button-knife">yes</a>
       </span>	 
     <div class="story hidden" id="hunstman-story">
@@ -105,8 +105,8 @@
   <div id="dwarves" class="page">
 	  <h2>The Dwarves are outsiders.</h2>
     <span>
-	    <img class="tap-image" src="img/dwarves.png"></a>
-      <img class="tap-image hidden" id="crowd" src="img/dwarves-crowd.png"></a>
+	    <img class="tap-image" src="img/dwarves-white.png"></a>
+      <img class="tap-image hidden" id="crowd" src="img/dwarves.png"></a>
       <a class="button img-button img-button-crowd">yes</a>
       </span>	      
     <div class="story hidden" id="dwarves-story">
@@ -159,8 +159,8 @@
   <div id="prince" class="page">
 	  <h2>The Prince is a necrophiliac.</h2>
     <span>
-	    <img class="tap-image" src="img/coffin.png"></a>
-      <img class="tap-image hidden" id="death" src="img/coffin-death.png"></a>
+	    <img class="tap-image" src="img/coffin-white.png"></a>
+      <img class="tap-image hidden" id="death" src="img/coffin.png"></a>
       <a class="button img-button img-button-death">yes</a>
       </span>	
     <span>
