--- a/text_pageinteractions.html
+++ b/text_pageinteractions.html
@@ -29,6 +29,11 @@
 <body style="background: #000; height:15000px;">
 
 <div class="tester-page">
+<img class="tap-image hidden" id="hand" src="img/hand-empty.png">
+</div>
+
+
+<div class="tester-page">
 <!--<img style="position:absolute;" src="img/hand.png">
 <img style="display: none; position:absolute;" id="tiger" src="img/hand-empty.png">
 <a style="position: absolute; top: 25px; left: 25px; cursor: pointer; color: blue;" id="toggle">click to toggle</a>-->
