--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	<div id="empty" class="page">
 	  <h2>Snow White is an empty shell.</h2>
 	  <span>
-	    <img class="tap-image" src="img/snowwhite-white.png"></a>
-      <img class="tap-image hidden" id="eyes" src="img/snowwhite.png"></a>
+	    <img class="tap-image" src="img/snowwhite.png"></a>
+      <img class="tap-image hidden" id="eyes" src="img/snowwhite-white.png"></a>
       <a class="button img-button" id="img-button-eyes"></a>
       </span>
     <div class="story hidden" id="empty-story">
